--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/FonseLULW/COMP2537Assignment1#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
