--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/FonseLULW/COMP2537Assignment1#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "jquery": "^3.6.0",
