--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "jquery": "^3.6.0",
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.16"
