--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "jquery": "^3.6.0",
+    "jshint": "^2.13.4",
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.16"
   }
